--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,8 @@
-@import "flowbite";
-@tailwind utilities;
+@import "tailwindcss";
+
+@plugin 'flowbite-react/plugin/tailwindcss';
+
+@source '../.flowbite-react/class-list.json';
 
 button {
   cursor: pointer;
